# ChangeLog for dev-python/gammapy
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*gammapy-0.1 (28 Aug 2014)

  28 Aug 2014; Joseph Jon Booker <joe@neoturbine.net> +gammapy-0.1.ebuild,
  gammapy-9999.ebuild:
  dev-python/gammapy: version bump for 0.1 release

*gammapy-9999 (08 Aug 2014)

  08 Aug 2014; Joseph Jon Booker <joe@neoturbine.net> +gammapy-9999.ebuild,
  +metadata.xml:
  dev-python/gammapy: Add gammapy package