@@ -28,7 +28,9 @@ RDEPEND="
 	dev-python/astropy-helpers[${PYTHON_USEDEP}]
 	dev-python/numpy[${PYTHON_USEDEP}]"
 
-DEPEND="${RDEPEND}"
+DEPEND="${RDEPEND}
+	dev-python/astropy-helpers[${PYTHON_USEDEP}]
+"
 
 python_prepare_all() {
 	distutils-r1_python_prepare_all
